refactor: use charset utf8 encoding const